chore: add jvm args to make legacy dependencies work with the new java module system